test/parser/channel/004.stderr
At: "004.hac":3:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	(null) 
#STATE#	(null) 
#STATE#	keyword: defchan [3:1..7]
#STATE#	identifier: mychan [3:9..14]
#STATE#	<: [3:16]
#STATE#	keyword: chan [3:19..22]
#STATE#	( [3:23]
#STATE#	list<(type-ref)>: (type-ref) ... [3:24..27]
#STATE#	identifier: b [3:29]
in state #STATE#, possible rules are:
	data_type_ref_list_optional : data_type_ref_list .  (#RULE#)
	data_type_ref_list : data_type_ref_list . ',' data_type_ref  (#RULE#)
acceptable tokens are: 
	')' (reduce)
	',' (shift)
