test/parser/channel/004.hac
// "004.hac" should fail, channel data types should be anonymous

defchan mychan <: chan(bool b) (int i);

